# EnrichedFEMUsingPINNs

./: .gitignore  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  Dockerfile.python  devcontainer.json  docker-compose.yml  environment.yml  requirements.txt  run.py
build_sphinx/: .buildinfo  conf.py  enrichedfem.error_estimations.html  enrichedfem.fenics_expressions.html  enrichedfem.gains.html  enrichedfem.geometry.html  enrichedfem.html  enrichedfem.modfenics.error_estimations.html  enrichedfem.modfenics.fenics_expressions.html  enrichedfem.modfenics.gains.html  enrichedfem.modfenics.html  enrichedfem.modfenics.solver_fem.html  enrichedfem.networks.html  enrichedfem.networks.test_1D.html  enrichedfem.networks.test_1D.test_1.html  enrichedfem.networks.test_1D.test_2.html  enrichedfem.networks.test_2D.html  enrichedfem.networks.test_2D.test_1.html  enrichedfem.networks.test_2D.test_2.html  enrichedfem.networks.test_2D.test_3.html  enrichedfem.networks.test_2D.test_4.html  enrichedfem.problem.html  enrichedfem.solver_fem.html  enrichedfem.testcases.geometry.html  enrichedfem.testcases.html  enrichedfem.testcases.networks.html  enrichedfem.testcases.problem.html  genindex.html  index.html  modfenics.error_estimations.html  modfenics.fenics_expressions.html  modfenics.gains.html  modfenics.html  modfenics.rst  modfenics.solver_fem.html  modules.html  objects.inv  py-modindex.html  run_tests.html  search.html  (+6 more)
docs/: enrichedfem.modfenics.gains.rst  enrichedfem.modfenics.rst  enrichedfem.modfenics.solver_fem.rst  (+2 more)
(+217 files in other folders)
