[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enrichedfem"
version = "1.0.0"
description = "A project containing both modfenics and testcases modules."
authors = [{name = "Frédérique", email = "frederique.lecourtier@gmail.com"}]

# Spécifiez les deux packages sous le même toit
[tool.setuptools]
packages = ["enrichedfem"]
package-dir = {"" = "src"}
